modify price position

--- a/static/template/base.html
+++ b/static/template/base.html
@@ -41,7 +41,7 @@
       </div>
     </div>
 
-    <div class="container-fluid" style="background:#f6f6f6">
+    <div class="container-fluid" style="background:#f6f6f6;margin-top:20px">
     {% block container %}{% end %}
     </div><!-- /.container -->
 
