--- a/static/template/waterfall.box.html
+++ b/static/template/waterfall.box.html
@@ -1,7 +1,7 @@
-<div class='box' style='margin:0 5px 5px 0;'>
-    <div class='img_holder'>
+<div class='box' style='margin:10px 5px;'>
+    <div class='img_holder' style="position:relative">
         <a href={{link}} target="_blank"><img src={{img_url}} class='img-rounded'></a>
-        <span class='price badge' style='z-index:100;right:0;top:260px;position:absolute'>{{price}}</span>
+        <span class='price badge' style='z-index:100;right:0;bottom:0;position:absolute;margin:10px 0;'>{{price}}</span>
     </div>
 
     <div class='row' style='padding: 2.5px'>
